--- a/android/Dogglers/app/src/main/AndroidManifest.xml
+++ b/android/Dogglers/app/src/main/AndroidManifest.xml
@@ -10,7 +10,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Dogglers">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.HorizontalListActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ui.VerticalListActivity"
+            android:exported="false" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ui.GridListActivity"
+            android:exported="false" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
