--- a/android/LaunchTray/app/build.gradle
+++ b/android/LaunchTray/app/build.gradle
@@ -61,5 +61,8 @@ dependencies {
 
     // instrument testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.navigation:navigation-testing:2.4.2"
+    debugImplementation "androidx.fragment:fragment-testing:1.4.1"
 }
