--- a/android/MarsPhoto/app/build.gradle
+++ b/android/MarsPhoto/app/build.gradle
@@ -31,6 +31,10 @@ android {
         jvmTarget = '1.8'
     }
 
+    sourceSets {
+        test.resources.srcDirs += 'src/test/res'
+    }
+
     buildFeatures {
         dataBinding true
     }
@@ -65,6 +69,8 @@ dependencies {
 
     // unit testing
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
 
     // instrument testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
